--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
-        "aos": "^2.3.4"
+        "aos": "^2.3.4",
+        "leaflet": "^1.9.4"
     }
 }
